# epistemic-toolbox

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: validate.yml
docs/: beamline-display-language.md  bridge-probe.md
docs/beam-patterns/: concept-equivalence.md
examples/beamlines/: synthetic-lineage-graph.json
examples/papers/: attention-origin.concept-block.json  attention-usage-metaphor.concept-block.json
receipts/concept-equivalence/: attention.synthetic.artifact.json
schemas/: beamline-display.schema.json  concept-block.schema.json  concept-equivalence-artifact.schema.json
src/epistemic_toolbox/: beamline_display.py  bridge_probe.py  concept_equivalence.py
tests/: test_beamline_display.py  test_bridge_probe.py
tools/: beamline_display.py  bridge_probe.py  concept_equivalence.py
